<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
            android:key="version"
            android:title="@string/version">
            </Preference>
    <Preference
            android:key="change_log"
            android:title="@string/changeLog">
    </Preference>
    <Preference
            android:key="owner"
            android:title="@string/develop_and_design"
            android:summary="@string/owner_name">
        <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/google_plus_url"></intent>
    </Preference>
    <Preference
            android:key="contact"
            android:title="@string/Contact"
            android:summary="@string/contact_email">
        <intent
                android:action="android.intent.action.SENDTO"
                android:data="@string/send_contact_email"></intent>
    </Preference>
</PreferenceScreen>