<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
            android:title="@string/normal_set">
        <ListPreference
                android:key="time_select"
                android:title="@string/update_interval"
                android:entries="@array/entries_list_preference"
                android:entryValues="@array/entry_values_list_preference"
                android:dialogTitle="@string/set_update_interval"
                android:defaultValue="0"/>
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/unit">
        <ListPreference
                android:key="temp_unit"
                android:title="@string/temp_unit"
                android:entries="@array/temp_list_preference"
                android:entryValues="@array/temp_value_list_preference"
                android:defaultValue="30"
                android:dialogTitle="@string/set_temp_unit">
        </ListPreference>

    </PreferenceCategory>
</PreferenceScreen>